# SillySynth

./: .gitignore  CMakeLists.txt  main.cpp
audio/: Bus.cpp  Bus.h  Defines.h  LrBuffer.cpp  LrBuffer.h  Oscillator.cpp  Oscillator.h  ScopedPaHandler.cpp  ScopedPaHandler.h  SoundEngine.cpp  SoundEngine.h  math.h
audio/fx/: Distortion.cpp  Distortion.h  Effect.cpp  Effect.h  EffectFactory.cpp  EffectFactory.h  Empty.h  Spectrum.cpp  Spectrum.h
misc/: EnumMap.cpp  EnumMap.h  Overloaded.h  UniqueId.cpp  UniqueId.h  strConCat.h
view/: MainWindow.cpp  MainWindow.h
